# AI_Homework

./: CMakeLists.txt
final_project/: README.md  ai.cpp  team_api.py
final_project/gui/Othello-master/: othello_gui.py
week_1/beta/class_beta/: classification.py  test_set.csv  train_beta.csv  valid_beta.csv
week_1/beta/regress_beta/: regression.py  res.csv  test_set.csv  x_mat  新建文本文档 (2).txt
week_1/classify/: classification.py  res.csv  新建文本文档 (2).txt  新建文本文档.txt
week_1/code/KNN/classification/: classification.py
week_1/code/KNN/regression/: regression.py
week_1/regression/: regression.py  y_mat  新建文本文档.txt
week_1/semeval/: semeval_res.txt  task_one.py  test.txt
week_2/: ID3.py  TreeNode.py  test.py
week_2/test-output/: ID3.gv  ID3_cut.gv  final.gv  round-table.gv
week_3/: UFS.py
week_4/: A_star.py  IDA_star.py
week_5/: main.cpp  othello_ai.py  othello_gui.py  othello_module.py  test.py  value_funciton.h  value_function.cpp
week_6/: main.cpp
week_7/: task_1.py  task_2.py  task_3.py
week_8/: task_1.py
